--- a/mytable2.tex
+++ b/mytable2.tex
@@ -1,15 +1,15 @@
-\begin{tabular}{rrrr}
+\begin{tabular}{rrrl}
 \toprule
- SiteID &  Negative (\%) &  Missing (\%) &  Total Samples \\
+ SiteID &  Negative (\%) &  Missing (\%) & Total Samples \\
 \midrule
-      0 &         0.000 &        1.613 &           6446 \\
-      1 &         0.000 &        6.290 &         163111 \\
-      2 &         0.000 &        4.348 &          62990 \\
-      3 &         0.271 &       77.333 &          25464 \\
-      4 &         0.000 &        2.069 &          74787 \\
-      5 &         0.000 &        8.828 &         113952 \\
-      6 &         0.000 &        7.444 &         142141 \\
-      7 &         0.000 &        4.195 &         115162 \\
-      8 &         0.000 &       21.057 &          43824 \\
+      0 &         0.000 &        1.613 &          6446 \\
+      1 &         0.000 &        6.290 &        163111 \\
+      2 &         0.005 &        4.348 &         62990 \\
+      3 &         0.778 &       77.333 &         25464 \\
+      4 &         0.005 &        2.069 &         74787 \\
+      5 &         0.000 &        8.828 &        113952 \\
+      6 &         0.003 &        7.444 &        142141 \\
+      7 &         0.278 &        4.195 &        115162 \\
+      8 &         0.000 &       21.057 &         43824 \\
 \bottomrule
 \end{tabular}
