--- a/mytable3.tex
+++ b/mytable3.tex
@@ -1,15 +1,15 @@
-\begin{tabular}{rrrr}
+\begin{tabular}{rrrl}
 \toprule
- SiteID &  Negative (\%) &  Missing (\%) &  Total Samples \\
+ SiteID &  Negative (\%) &  Missing (\%) & Total Samples \\
 \midrule
-      9 &           0.0 &        5.301 &          22071 \\
-     10 &           0.0 &        3.590 &          96407 \\
-     11 &           0.0 &        1.904 &          20693 \\
-     12 &           0.0 &       17.485 &          45240 \\
-     13 &           0.0 &       51.461 &          12423 \\
-     14 &           0.0 &       10.532 &         113951 \\
-     15 &           0.0 &      100.000 &           2712 \\
-     16 &           0.0 &        6.531 &         154331 \\
-     17 &           0.0 &        6.271 &          91053 \\
+      9 &         0.000 &        5.301 &         22071 \\
+     10 &         0.004 &        3.590 &         96407 \\
+     11 &         0.087 &        1.904 &         20693 \\
+     12 &         0.000 &       17.485 &         45240 \\
+     13 &         0.016 &       51.461 &         12423 \\
+     14 &         0.000 &       10.532 &        113951 \\
+     15 &         0.000 &      100.000 &          2712 \\
+     16 &         0.014 &        6.531 &        154331 \\
+     17 &         0.002 &        6.271 &         91053 \\
 \bottomrule
 \end{tabular}
