--- a/mytable10.tex
+++ b/mytable10.tex
@@ -3,8 +3,9 @@
 {} &      0 &       1 &      2 &       3 &      4 &       5 &       6 &       7 &       8 &      9 &     10 &     11 &      12 &      13 &      14 &    15 &      16 &     17 \\
 \midrule
 SiteID        &      0 &       1 &      2 &       3 &      4 &       5 &       6 &       7 &       8 &      9 &     10 &     11 &      12 &      13 &      14 &    15 &      16 &     17 \\
-Negative (\%)  &      0 &       0 &      0 &   0.271 &      0 &       0 &       0 &       0 &       0 &      0 &      0 &      0 &       0 &       0 &       0 &     0 &       0 &      0 \\
+Negative (\%)  &      0 &       0 &  0.005 &   0.778 &  0.005 &       0 &   0.003 &   0.278 &       0 &      0 &  0.004 &  0.087 &       0 &   0.016 &       0 &     0 &   0.014 &  0.002 \\
 Missing (\%)   &  1.613 &    6.29 &  4.348 &  77.333 &  2.069 &   8.828 &   7.444 &   4.195 &  21.057 &  5.301 &   3.59 &  1.904 &  17.485 &  51.461 &  10.532 &   100 &   6.531 &  6.271 \\
+Total prob    &  1.613 &    6.29 &  4.353 &  78.111 &  2.074 &   8.828 &   7.447 &   4.473 &  21.057 &  5.301 &  3.594 &  1.991 &  17.485 &  51.477 &  10.532 &   100 &   6.545 &  6.273 \\
 Total samples &   6446 &  163111 &  62990 &   25464 &  74787 &  113952 &  142141 &  115162 &   43824 &  22071 &  96407 &  20693 &   45240 &   12423 &  113951 &  2712 &  154331 &  91053 \\
 \bottomrule
 \end{tabular}
